--- a/modules/episodes/client/views/view-episode.client.view.html
+++ b/modules/episodes/client/views/view-episode.client.view.html
@@ -79,9 +79,9 @@
 
       <br>
 
-      <p ng-init="numSlots = vm.episode.maxAttendees - vm.episode.attendees.length">
-        <span ng-if="numSlots > 0">There are <b>{{numSlots}} open player slots</b> remaining for this session.</span>
-        <span ng-if="numSlots <= 0">Attendance is full<span ng-if="vm.episode.isOpen">, but signups are still open. Players will be selected according to episode relevance and and attendance in previous sessions. Players who are selected will be notified once the session's attendance is locked, typically 3 days before the session date.</span><span ng-if="!vm.episode.isOpen"> and players have been selected for attendance in this session.</span></span>
+      <p>
+        <span ng-if="vm.episode.maxAttendees - vm.episode.attendees.length > 0">There are <b>{{vm.episode.maxAttendees - vm.episode.attendees.length}} open player slots</b> remaining for this session.</span>
+        <span ng-if="vm.episode.maxAttendees - vm.episode.attendees.length <= 0">Attendance is full<span ng-if="vm.episode.isOpen">, but signups are still open. Players will be selected according to episode relevance and and attendance in previous sessions. Players who are selected will be notified once the session's attendance is locked, typically 3 days before the session date.</span><span ng-if="!vm.episode.isOpen"> and players have been selected for attendance in this session.</span></span>
       </p>
       <hr>
 
