--- a/modules/characters/client/views/character-sheet/main.subview.html
+++ b/modules/characters/client/views/character-sheet/main.subview.html
@@ -1,51 +1,38 @@
 <div class="row">
-  <div class="col-xs-6 col-md-9">
+  <div class="col-xs-6 col-md-10">
 
     <div class="col-md-4">
       <div class="panel panel-default">
-        <div class="panel-heading">Hit Points</div>
+        <div class="panel-heading"><img src="modules\characters\client\images\heart_attempt.png"/> Hit Points</div>
         <div class="panel-body">
-          <div ng-bind="vm.character.hitpoints" style="display: inline-block"></div>
-          <div style="display:inline-block">
-            <img src="modules\characters\client\images\heart_attempt.png"/>
-          </div>
+          <div ng-bind="vm.character.hitpoints" style="font-size: 30px; text-align: center"></div>
         </div>
       </div>
     </div>
 
     <div class="col-md-4">
       <div class="panel panel-default">
-        <div class="panel-heading">AC</div>
+        <div class="panel-heading">  <img width='18px' height='18px'src="modules\characters\client\images\shield_attempt.png"/> AC</div>
         <div class="panel-body">
-          <div ng-bind="10 + vm.toModifierRaw(vm.character.attributes.Dexterity)" style="display: inline-block"></div>
-          <div style="display:inline-block">
-            <img width='18px' height='18px'src="modules\characters\client\images\shield_attempt.png"/>
-          </div>
+          <div ng-bind="10 + vm.toModifierRaw(vm.character.attributes.Dexterity)" style="font-size: 30px; text-align: center"></div>
         </div>
       </div>
     </div>
 
     <div class="col-md-4">
       <div class="panel panel-default">
-        <div class="panel-heading">Speed</div>
+        <div class="panel-heading"><img width='20px' height='20px'src="modules\characters\client\images\boot_attempt.png"> Speed</div>
         <div class="panel-body">
-          <div style="display: inline-block">30 ft.</div>
-          <div style="display:inline-block">
-            <img width='20px' height='20px'src="modules\characters\client\images\boot_attempt.png"/>
-          </div>
+          <div style="font-size: 30px;text-align: center">30 ft.</div>
         </div>
       </div>
     </div>
 
   </div>
-  <div class="col-md-3 col-xs-6">
-    <div class="row">
-      <div class="col-xs-12 text-right">
-        <b>{{vm.character.race.name}} {{vm.character.background.generalization.name}}</b>
-      </div>
-    </div>
+  <div class="col-md-2 col-xs-6">
+    <h5 style="font-weight: bold">Classes</h5>
     <div class="row" ng-repeat="prof in vm.character.playableClass">
-      <div class="col-xs-12 text-right">Level {{prof.level}} {{prof.profession.name}}</div>
+        <h1 class="label label-default">Level {{prof.level}} {{prof.profession.name}}</h1>
     </div>
   </div>
 </div>
