Moved CSS in character sheet to own file, fixed slash issue.

--- a/modules/characters/client/views/character-sheet/main.subview.html
+++ b/modules/characters/client/views/character-sheet/main.subview.html
@@ -3,34 +3,34 @@
 
     <div class="col-md-4">
       <div class="panel panel-default">
-        <div class="panel-heading"><img src="modules\characters\client\images\heart_attempt.png"/> Hit Points</div>
+        <div class="panel-heading"><img src="modules/characters/client/images/heart_attempt.png"/> Hit Points</div>
         <div class="panel-body">
-          <div ng-bind="vm.character.hitpoints" style="font-size: 30px; text-align: center"></div>
+          <div ng-bind="vm.character.hitpoints" class="stat-panels"></div>
         </div>
       </div>
     </div>
 
     <div class="col-md-4">
       <div class="panel panel-default">
-        <div class="panel-heading">  <img width='18px' height='18px'src="modules\characters\client\images\shield_attempt.png"/> AC</div>
+        <div class="panel-heading">  <img width='18px' height='18px'src="modules/characters/client/images/shield_attempt.png"/> AC</div>
         <div class="panel-body">
-          <div ng-bind="10 + vm.toModifierRaw(vm.character.attributes.Dexterity)" style="font-size: 30px; text-align: center"></div>
+          <div ng-bind="10 + vm.toModifierRaw(vm.character.attributes.Dexterity)" class="stat-panels"></div>
         </div>
       </div>
     </div>
 
     <div class="col-md-4">
       <div class="panel panel-default">
-        <div class="panel-heading"><img width='20px' height='20px'src="modules\characters\client\images\boot_attempt.png"> Speed</div>
+        <div class="panel-heading"><img width='20px' height='20px'src="modules/characters/client/images/boot_attempt.png"> Speed</div>
         <div class="panel-body">
-          <div style="font-size: 30px;text-align: center">30 ft.</div>
+          <div class="stat-panels">30 ft.</div>
         </div>
       </div>
     </div>
 
   </div>
   <div class="col-md-2 col-xs-6">
-    <h5 style="font-weight: bold">Classes</h5>
+    <h5 class="classes-header">Classes</h5>
     <div class="row" ng-repeat="prof in vm.character.playableClass">
         <h1 class="label label-default">Level {{prof.level}} {{prof.profession.name}}</h1>
     </div>
