--- a/modules/characters/client/views/view-character.client.view.html
+++ b/modules/characters/client/views/view-character.client.view.html
@@ -42,6 +42,9 @@
 
       <!-- Character Name -->
       <h1 data-ng-bind="vm.character.name"></h1>
+      <div>
+        {{vm.character.race.name}} {{vm.character.background.generalization.name}}
+      </div>
     </div>
 
     <div class="row">
