--- a/modules/characters/client/views/directives/player-inventory.view.html
+++ b/modules/characters/client/views/directives/player-inventory.view.html
@@ -2,45 +2,36 @@
   <div class="col-xs-6"><h4>Inventory</h4></div>
   <div class="col-xs-6 text-right"><h5>Funds: {{vm.character.funds}} ℝ</h5></div>
 </div>
-  <div class="list-group" ng-if="vm.character.items.length > 0">
-    <div class="row"><b>
+<div class="list-group" ng-if="vm.character.items.length > 0">
+  <div class="row"><b>
+    <div ng-if="vm.canEquip">
+      <div class="col-sm-1">Eqp</div>
+    </div>
+    <div class="col-sm-5">Name</div>
+    <div class="col-sm-3">Type</div>
+    <div class="col-sm-3">Price</div>
+  </b></div>
+  <div>
+    <div class="list-group-item row" ng-repeat="item in vm.character.items | unique: '_id' track by $index" >
       <div ng-if="vm.canEquip">
-        <div class="col-sm-1">Eqp</div>
+        <div class="col-sm-1" ng-init="equipped[item.name] = false" ng-click="equipped[item.name] = !equipped[item.name]">
+          <span class="glyphicon can-select" aria-hidden="true"
+              ng-class="{'glyphicon-unchecked': !equipped[item.name],
+                          'glyphicon-check': equipped[item.name]}"></span>
+        </div>
       </div>
-      <div class="col-sm-5">Name</div>
-      <div class="col-sm-3">Type</div>
-      <div class="col-sm-3">Price</div>
-    </b></div>
-    <div style="overflow: auto; overflow-x: hidden; max-height: 250px;">
-      <div class="list-group-item row" ng-repeat="item in vm.character.items | unique: '_id' track by $index" >
-        <div ng-if="vm.canEquip">
-          <div class="col-sm-1" ng-init="equipped[item.name] = false" ng-click="equipped[item.name] = !equipped[item.name]">
-            <span class="glyphicon can-select" aria-hidden="true"
-                ng-class="{'glyphicon-unchecked': !equipped[item.name],
-                            'glyphicon-check': equipped[item.name]}"></span>
-          </div>
+      <div class="col-sm-5">{{item.name}}{{vm.accountForMultiples(item)}}</div>
+      <div class="col-sm-3" ng-bind="item.classification"></div>
+      <div class="col-sm-2">{{item.price}} ℝ</div>
+      <div class="pull-right">
+        <div class="col-xs-1">
+          <span class="glyphicon glyphicon-info-sign can-select" aria-hidden="true" tooltip-template="'modules/items/client/views/directives/shop-tooltip.view.html'" tooltip-trigger="mouseenter" tooltip-placement="right"></span>
         </div>
-        <div class="col-sm-5">{{item.name}}{{vm.accountForMultiples(item)}}</div>
-        <div class="col-sm-3" ng-bind="item.classification"></div>
-        <div class="col-sm-2">{{item.price}} ℝ</div>
-        <div class="col-sm-1" ng-click="vm.infoItem = item">
-          <span class="glyphicon glyphicon-info-sign can-select" aria-hidden="true"></span>
-        </div>
-        <div ng-if="vm.canSell">
-          <div class="col-sm-1" ng-click="vm.removeItem(item)">
-            <span class="glyphicon glyphicon-minus-sign can-select" aria-hidden="true"></span>
-          </div>
+        <div class="col-xs-1" ng-if="vm.canSell" ng-click="vm.removeItem(item)">
+          <span class="glyphicon glyphicon-minus-sign can-select" aria-hidden="true"></span>
         </div>
       </div>
     </div>
   </div>
-  <br>
-  <div ng-if="vm.infoItem" class="well">
-    <div class="row" style="margin-top: 4px; margin-bottom: 0;">
-      <div class="col-xs-1 glyphicon glyphicon-info-sign" style="margin-top: 12px"></div>
-      <div class="col-xs-11">
-        <h5><b>{{vm.infoItem.name}}</b></h5>
-        <span class="line-breaker">{{vm.infoItem.description}}</span>
-      </div>
-    </div>
 </div>
+<br>
