--- a/modules/items/client/views/directives/shop-list.view.html
+++ b/modules/items/client/views/directives/shop-list.view.html
@@ -30,6 +30,6 @@
     </div>
   </div>
 </div>
-<div class="col-xs-offset-2 col-xs-8">
+<div class="col-xs-12 text-center">
   <pagination boundary-links="true" max-size="8" items-per-page="vm.itemsPerPage" total-items="vm.filterLength" ng-model="vm.currentPage" ng-change="vm.pageChanged()"></pagination>
 </div>
