--- a/modules/characters/client/views/character-sheet/main.subview.html
+++ b/modules/characters/client/views/character-sheet/main.subview.html
@@ -1,7 +1,7 @@
 <div class="row">
-  <div class="col-xs-6 col-md-10">
+  <div class="col-xs-6 col-sm-10">
 
-    <div class="col-md-4">
+    <div class="col-sm-4">
       <div class="panel panel-default">
         <div class="panel-heading"><img src="modules/characters/client/images/heart_attempt.png"/> Hit Points</div>
         <div class="panel-body">
@@ -10,7 +10,7 @@
       </div>
     </div>
 
-    <div class="col-md-4">
+    <div class="col-sm-4">
       <div class="panel panel-default">
         <div class="panel-heading">  <img width='18px' height='18px'src="modules/characters/client/images/shield_attempt.png"/> AC</div>
         <div class="panel-body">
@@ -19,7 +19,7 @@
       </div>
     </div>
 
-    <div class="col-md-4">
+    <div class="col-sm-4">
       <div class="panel panel-default">
         <div class="panel-heading"><img width='20px' height='20px'src="modules/characters/client/images/boot_attempt.png"> Speed</div>
         <div class="panel-body">
@@ -28,8 +28,10 @@
       </div>
     </div>
 
+    <spellcasting></spellcasting>
+
   </div>
-  <div class="col-md-2 col-xs-6">
+  <div class="col-sm-2 col-xs-6">
     <h5 class="classes-header">Classes</h5>
     <div class="row" ng-repeat="prof in vm.character.playableClass">
         <h1 class="label label-default">Level {{prof.level}} {{prof.profession.name}}</h1>
