Finalized Spellcasting Panel for character sheet

--- a/modules/characters/client/views/character-sheet/main.subview.html
+++ b/modules/characters/client/views/character-sheet/main.subview.html
@@ -28,7 +28,7 @@
       </div>
     </div>
 
-    <spellcasting></spellcasting>
+    <spellcasting-panel stats="{{vm.character.attributes}}" professions="{{vm.character.playableClass}}"></spellcasting-panel>
 
   </div>
   <div class="col-sm-2 col-xs-6">
