--- a/modules/items/client/views/directives/shop-tooltip.view.html
+++ b/modules/items/client/views/directives/shop-tooltip.view.html
@@ -1,3 +1,3 @@
-<span class="bold-item-name">{{item.name}}</span><hr>
-<span class="rarity-{{item.rarity | lowercase}}">{{item.rarity}}</span><hr>
-<span>{{item.description}}</span>
+<span class="bold-item-name add-pre-wrap">{{item.name}}</span><hr>
+<span class="rarity-{{item.rarity | lowercase}} add-pre-wrap">{{item.rarity}}</span><hr>
+<span class="add-pre-wrap">{{item.description}}</span>
