Conversations now work!

--- a/modules/messages/client/views/comment-container.html
+++ b/modules/messages/client/views/comment-container.html
@@ -6,6 +6,6 @@
     </div>
   </div>
   <div>
-    <message-entry user="{{vm.user}}" socket="vm.promiseSocket" context="{{context}}"></message-entry>
+    <message-entry user="{{vm.user}}" socket="vm.promiseSocket" context="context"></message-entry>
   </div>
 </section>
