--- a/modules/messages/client/views/comment-container.html
+++ b/modules/messages/client/views/comment-container.html
@@ -1,9 +1,10 @@
 <section>
-  <div ng-if="vm.messages">
-    <div ng-repeat="msg in vm.messages | limitTo: '-'+display">
+  <div ng-if="vm.messages" class="messages-container">
+    <div ng-repeat="msg in vm.messages">
       <message-view message="{{msg}}"></message-view>
       <br>
     </div>
+    <a id="endOfMessages"></a>
   </div>
   <div>
     <message-entry user="{{vm.user}}" socket="vm.promiseSocket" context="context"></message-entry>
