--- a/modules/characters/client/views/character-sheet/main.subview.html
+++ b/modules/characters/client/views/character-sheet/main.subview.html
@@ -1,40 +1,31 @@
-<div class="row">
-  <div class="col-xs-6 col-sm-10">
-
-    <div class="col-sm-4">
-      <div class="panel panel-default">
-        <div class="panel-heading"><img src="modules/characters/client/images/heart_attempt.png"/> Hit Points</div>
-        <div class="panel-body">
-          <div ng-bind="vm.character.hitpoints" class="stat-panels"></div>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-sm-4">
-      <div class="panel panel-default">
-        <div class="panel-heading">  <img width='18px' height='18px'src="modules/characters/client/images/shield_attempt.png"/> AC</div>
-        <div class="panel-body">
-          <div ng-bind="10 + vm.toModifierRaw(vm.character.attributes.Dexterity)" class="stat-panels"></div>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-sm-4">
-      <div class="panel panel-default">
-        <div class="panel-heading"><img width='20px' height='20px'src="modules/characters/client/images/boot_attempt.png"> Speed</div>
-        <div class="panel-body">
-          <div class="stat-panels">30 ft.</div>
-        </div>
-      </div>
-    </div>
-
-    <spellcasting-panel stats="{{vm.character.attributes}}" professions="{{vm.character.playableClass}}"></spellcasting-panel>
-
-  </div>
-  <div class="col-sm-2 col-xs-6">
-    <h5 class="classes-header">Classes</h5>
-    <div class="row" ng-repeat="prof in vm.character.playableClass">
-        <h1 class="label label-default">Level {{prof.level}} {{prof.profession.name}}</h1>
+<div class="col-sm-12 col-xs-4">
+  <div class="panel panel-default">
+    <div class="panel-heading"><img src="modules/characters/client/images/heart_attempt.png"/> Hit Points</div>
+    <div class="panel-body">
+      <div ng-bind="vm.character.hitpoints" class="stat-panels"></div>
     </div>
   </div>
 </div>
+<br class="col-xs-hidden">
+
+<div class="col-sm-12 col-xs-4">
+  <div class="panel panel-default">
+    <div class="panel-heading">  <img width='18px' height='18px'src="modules/characters/client/images/shield_attempt.png"/> AC</div>
+    <div class="panel-body">
+      <div ng-bind="10 + vm.toModifierRaw(vm.character.attributes.Dexterity)" class="stat-panels"></div>
+    </div>
+  </div>
+</div>
+<br class="col-xs-hidden">
+
+<spellcasting-panel stats="{{vm.character.attributes}}" professions="{{vm.character.playableClass}}"></spellcasting-panel>
+
+<div class="col-sm-12 col-xs-4">
+  <div class="panel panel-default">
+    <div class="panel-heading"><img width='20px' height='20px'src="modules/characters/client/images/boot_attempt.png"> Speed</div>
+    <div class="panel-body">
+      <div class="stat-panels">30 ft.</div>
+    </div>
+  </div>
+</div>
+<br class="col-xs-hidden">
