--- a/modules/characters/client/views/directives/spellcasting-panel.view.html
+++ b/modules/characters/client/views/directives/spellcasting-panel.view.html
@@ -1,10 +1,10 @@
-<div class="col-sm-4" ng-if="vm.isSpellCaster()">
+<div ng-if="vm.isSpellCaster()" class="col-sm-12 col-xs-4">
   <div class="panel panel-default">
     <div class="panel-heading"><span class="glyphicon glyphicon-fire"></span> Spellcasting</div>
     <div class="panel-body">
-      <span class="text-center">Attacks</span><span class="pull-right">1d20 + {{vm.attackRollMod()}}</span>
+      <span class="text-center col-sm-hidden">Attacks</span><span class="pull-right">1d20 + {{vm.attackRollMod()}}</span>
       <hr style="margin-top: 4px; margin-bottom: 4px;">
-      <span class="text-center">Saves</span><span class="pull-right">DC {{vm.spellSaveDC()}}</span>
+      <span class="text-center col-sm-hidden">Saves</span><span class="pull-right">DC {{vm.spellSaveDC()}}</span>
     </div>
   </div>
 </div>
