--- a/modules/messages/client/views/comment-container.html
+++ b/modules/messages/client/views/comment-container.html
@@ -1,6 +1,6 @@
 <section>
   <div ng-if="vm.messages" class="messages-container">
-    <div ng-repeat="msg in vm.messages">
+    <div scroll-glue ng-repeat="msg in vm.messages">
       <message-view message="{{msg}}"></message-view>
       <br>
     </div>
