Added dates to message display

--- a/modules/messages/client/views/emote.html
+++ b/modules/messages/client/views/emote.html
@@ -4,7 +4,7 @@
     <img ng-if="vm.message.sender.profileImageURL" ng-src="{{vm.message.sender.profileImageURL}}" class="header-profile-image" />
   </div>
   <div class="col-xs-10 col-sm-11 col-md-10">
-    <i><small class="pull-right" ng-bind="vm.message.created | date:'short'"></small></i>
+  <small class="pull-right" ng-bind="message.created | date:'short'"></small>
     <b>{{vm.message.sender.firstName}} {{vm.message.sender.lastName}}</b><br>
     {{vm.message.contents}}
   </div>
